--- a/app/views/users/review_dashboard.html.erb
+++ b/app/views/users/review_dashboard.html.erb
@@ -169,7 +169,10 @@
 </div>
 <p class="intro-paragraph  footer-paragraph s12">
 	<a download href="<%= "#{RELATIVE_URL}/download_all_files/#{current_user.id}" %>"><button class="custom-button primary">Download all files</button></a>
-	<%if current_user.progress_status === "accepted" %><a download href="<%= "#{RELATIVE_URL}/generate_acceptance_letter/#{current_user.id}" %>"><button class="custom-button primary">Generate Acceptance Letter</button></a><%end%>
+	<!--	<%#if current_user.progress_status === "accepted" %><a download href="<%#= "#{RELATIVE_URL}/generate_acceptance_letter/#{current_user.id}" %>">
+		<button class="custom-button primary">Generate Acceptance Letter</button>
+	</a><%#end%>-->
+	<button id="acceptance-letter-dialog-button" class="custom-button primary">Generate Acceptance Letter</button>
 	<button class="custom-button primary" id="delete-user">Delete user</button>
 	<br/>
 	<span class="registered_at"><b>Registered</b>: <%=current_user.created_at.in_time_zone("Madrid").strftime("%d-%m-%Y %r") %>. &nbsp; &nbsp;  &nbsp; <b>Last updated:</b>  <%=current_user.updated_at.in_time_zone("Madrid").strftime("%d-%m-%Y %r") %></span>
@@ -191,4 +194,28 @@
 		</div>
 	</div>
 
+</div>
+
+<div id="acceptance-letter-dialog" >
+	<h2 class="title">Generate acceptance letters</h2>
+	<button class="transparent-button action-button right close" id="acceptance-letter-dialog-close"><i class="mdi mdi-close"></i></button>
+	<form method="get" action="<%="#{RELATIVE_URL}/generate_acceptance_letter/#{current_user.id}" %>">
+		<div class="acceptance-letter-form">
+			<div class="first">
+				<h3 class="al-format">Format</h3>
+				<input type="radio" name="downloadformat" value="pdf" checked/>
+				<label for="downloadformat">PDF</label>
+				<input type="radio" name="downloadformat" value="docx"/>
+				<label for="downloadformat">DOCX</label>
+			</div>
+			<div class="last">
+				<input id="logos-checkbox" type="checkbox" name="logos"/>
+				<label for="logos">Include logos</label>
+			</div>
+		</div>
+		<p class="align-right">
+
+			<button type="submit" class="custom-button primary">Download</button>
+		</p>
+	</form>
 </div>
