--- a/app/views/users/_learning_agreement_panel.erb
+++ b/app/views/users/_learning_agreement_panel.erb
@@ -85,7 +85,7 @@
 
 <% end %>
 
-<div id="info-degrees-dialog" >
+<div id="info-degrees-dialog" class="modal">
   <h2 class="title">What to study at ETSIT</h2>
   <button class="transparent-button action-button right close" id="info-degrees-dialog-close"><i class="mdi mdi-close"></i></button>
   <ul>
