--- a/app/views/users/_eidas.erb
+++ b/app/views/users/_eidas.erb
@@ -43,7 +43,7 @@
             </select>
           </div>
         </div>
-        <button id="certificate_button" class="custom-button"><%= image_tag("eidas.jpg", alt: "eIDAS", id: "logo-eidas") %>Register with eIDAS</button>
+<!--        <button id="certificate_button" class="custom-button"><%#= image_tag("eidas.jpg", alt: "eIDAS", id: "logo-eidas") %>Register with eIDAS</button>-->
       <% end %>
     </div>
   </div>
