--- a/app/views/users/register_choice.html.erb
+++ b/app/views/users/register_choice.html.erb
@@ -9,4 +9,4 @@
 <% end %>
 <%= button_to "Register with email and password", "#{RELATIVE_URL}/register/"+@nominee.registration_token+"/register_with_email_and_password", :method=> :get, form_class: "inline", :class=> "custom-button primary" %>
 
-<%= render partial: "users/eidas", :locals => {} %>
+<%= render partial: "users/eidas_form", :locals => {} %>
