--- a/app/views/users/_eidas_form.erb
+++ b/app/views/users/_eidas_form.erb
@@ -16,30 +16,30 @@
           <div class="flex-container">
             <select class="form-control" id="country" name="country" style="width: 100%; height: 40px; padding: 5px; font-size: 0.8em; margin: 2px; margin-bottom: 12px;">
               <option value="AT">  (AT) Austria / Austria / Österreich </option>
-              <option value="BE">  (BE) Bélgica / Belgium / België </option>
-              <option value="CY">  (CY) Chipre / Cyprus / Κύπρος </option>
-              <option value="CZ">  (CZ) República Checa / Czech Republic / Česká republika </option>
-              <option value="DE">  (DE) Alemania / Germany / Deutschland </option>
-              <option value="DK">  (DK) Dinamarca / Denmark / Danmark </option>
-              <option value="EE">  (EE) Estonia / Estonia / Eesti </option>
+<!--              <option value="BE">  (BE) Bélgica / Belgium / België </option>-->
+<!--              <option value="CY">  (CY) Chipre / Cyprus / Κύπρος </option>-->
+<!--              <option value="CZ">  (CZ) República Checa / Czech Republic / Česká republika </option>-->
+<!--              <option value="DE">  (DE) Alemania / Germany / Deutschland </option>-->
+<!--              <option value="DK">  (DK) Dinamarca / Denmark / Danmark </option>-->
+<!--              <option value="EE">  (EE) Estonia / Estonia / Eesti </option>-->
               <option value="ES">  (ES) España / Spain </option>
-              <option value="FR">  (FR) Francia / France / France </option>
-              <option value="GR">  (GR) Grecia / Greece / Ελλάδα </option>
-              <option value="HR">  (HR) Croacia / Croatia / Hrvatska </option>
-              <option value="IE">  (IE) Irlanda / Ireland  </option>
-              <option value="IS">  (IS) Islandia / Iceland / Ísland </option>
+<!--              <option value="FR">  (FR) Francia / France / France </option>-->
+<!--              <option value="GR">  (GR) Grecia / Greece / Ελλάδα </option>-->
+<!--              <option value="HR">  (HR) Croacia / Croatia / Hrvatska </option>-->
+<!--              <option value="IE">  (IE) Irlanda / Ireland  </option>-->
+<!--              <option value="IS">  (IS) Islandia / Iceland / Ísland </option>-->
               <option value="IT">  (IT) Italia / Italy / Italia </option>
-              <option value="LT">  (LT) Lituania / Lithuania / Lietuva </option>
-              <option value="LU">  (LU) Luxemburgo / Luxembourg / Luxemburg </option>
-              <option value="LV">  (LV) Letonia / Latvia / Latvija </option>
-              <option value="MT">  (MT) Malta / Malta / Malta </option>
-              <option value="NL">  (NL) Holanda / Netherlands / Nederland </option>
-              <option value="NO">  (NO) Noruega / Norway / Kongeriket Norge </option>
-              <option value="PL">  (PL) Polonia / Poland / Polska </option>
+<!--              <option value="LT">  (LT) Lituania / Lithuania / Lietuva </option>-->
+<!--              <option value="LU">  (LU) Luxemburgo / Luxembourg / Luxemburg </option>-->
+<!--              <option value="LV">  (LV) Letonia / Latvia / Latvija </option>-->
+<!--              <option value="MT">  (MT) Malta / Malta / Malta </option>-->
+<!--              <option value="NL">  (NL) Holanda / Netherlands / Nederland </option>-->
+<!--              <option value="NO">  (NO) Noruega / Norway / Kongeriket Norge </option>-->
+<!--              <option value="PL">  (PL) Polonia / Poland / Polska </option>-->
               <option value="PT">  (PT) Portugal / Portugal / Portugal </option>
-              <option value="SE">  (SE) Suecia / Sweden / Sverige </option>
+<!--              <option value="SE">  (SE) Suecia / Sweden / Sverige </option>-->
               <option value="SI">  (SI) Eslovenia / Slovenia / Slovenija </option>
-              <option value="SK">  (SK) Eslovaquia / Slovakia / Slovensko </option>
+<!--              <option value="SK">  (SK) Eslovaquia / Slovakia / Slovensko </option>-->
             </select>
           </div>
         </div>
