Change eID button text

--- a/app/views/users/_eidas_form.erb
+++ b/app/views/users/_eidas_form.erb
@@ -1,4 +1,4 @@
-<button id="eidas-country-choice-dialog-button" class="custom-button"><%= image_tag("eidas.jpg", alt: "eIDAS", id: "logo-eidas") %>Register with eIDAS</button>
+<button id="eidas-country-choice-dialog-button" class="custom-button"><%= image_tag("eidas.jpg", alt: "eIDAS", id: "logo-eidas") %>Register with eID</button>
 
 <div id="eidas-country-choice-dialog" class="modal">
   <h2 class="title">Chose your country of origin</h2>
@@ -43,7 +43,7 @@
             </select>
           </div>
         </div>
-        <button id="certificate_button" class="custom-button"><%= image_tag("eidas.jpg", alt: "eIDAS", id: "logo-eidas") %>Register with eIDAS</button>
+        <button id="certificate_button" class="custom-button"><%= image_tag("eidas.jpg", alt: "eIDAS", id: "logo-eidas") %>Register with eID</button>
       <% end %>
     </div>
   </div>
