Add decimals to ECTS

--- a/app/views/users/_learning_agreement_panel.erb
+++ b/app/views/users/_learning_agreement_panel.erb
@@ -62,7 +62,7 @@
     </select>
     <input class="la-code" name="user[learning_agreement_subjects][][code]"/>
     <input class="la-name" name="user[learning_agreement_subjects][][subject]"/>
-    <input class="la-ects" name="user[learning_agreement_subjects][][ects]" type="number" min="0" max="400"  />
+    <input class="la-ects" name="user[learning_agreement_subjects][][ects]" type="number" min="0" step="any"  max="400"  />
     <button class="delete-la-button transparent-button small-button secondary" type="button"><i class="mdi mdi-close"></i></button>
   </div>
     <%end %>
