--- a/app/views/users/_learning_agreement_panel.erb
+++ b/app/views/users/_learning_agreement_panel.erb
@@ -18,7 +18,7 @@
   <% if !current_user.learning_agreement_subjects.blank? %>
     <% current_user.learning_agreement_subjects.each do |subject|%>
       <% total += subject.ects %>
-      <div class="la-row la-form-row" lang="en-US">
+      <div class="la-row la-form-row la-subject-existing" lang="en-US">
         <select class="la-degree" name="user[learning_agreement_subjects][][degree]" value="<%= subject.degree %>" <%= admin ? "disabled":"" %>>
           <option value="" disabled required ></option>
           <option value="GITST" <%= subject.degree == "GITST" ? "selected" : "" %>>GITST</option>
@@ -44,7 +44,7 @@
     <%end %>
   <%end %>
   <%unless admin %>
-  <div class="la-row la-form-row" lang="en-US">
+  <div class="la-row la-form-row" lang="en-US" id="la-subject-new">
     <select class="la-degree" name="user[learning_agreement_subjects][][degree]">
       <option value="" disabled selected required></option>
       <option value="GITST">GITST</option>
@@ -60,8 +60,8 @@
       <option value="MUIF">MUIF</option>
       <option value="Other">Other</option>
     </select>
-    <input class="la-code" name="user[learning_agreement_subjects][][code]"/>
-    <input class="la-name" name="user[learning_agreement_subjects][][subject]"/>
+    <input class="la-code" name="user[learning_agreement_subjects][][code]" />
+    <input class="la-name" name="user[learning_agreement_subjects][][subject]" />
     <input class="la-ects" name="user[learning_agreement_subjects][][ects]" type="number" min="0" step="any"  max="400"  />
     <button class="delete-la-button transparent-button small-button secondary" type="button"><i class="mdi mdi-close"></i></button>
   </div>
