--- a/app/views/nominee_mailer/user_creation_email.html.erb
+++ b/app/views/nominee_mailer/user_creation_email.html.erb
@@ -513,7 +513,7 @@ background-image: url(https://www.avanzaentucarrera.com/orientacion/comp/uploads
         <h2 class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #e31212;font-size: 17px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
 
         <span style="color:#18527c"><strong>In order to submit your application you must register in the ETSIT Incoming students platform. Follow this link: </strong></span>
-        <a style="color: #4664A2;text-decoration: none;" href="<%= @nominee_url %>">  </a>.</h2>
+        <a style="color: #4664A2;text-decoration: none;" href="<%= @nominee_url %>"><%= @nominee_url %></a>.</h2>
         <br/>
         <br/>
         <% settings = ProjectSettings.first_or_create! %>
