Added subject attribute: semester

--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -190,13 +190,15 @@
 						padding: 5px
 						margin-right: 10px
 					.la-degree
-						width: 25%
+						width: 10%
 					.la-code
 						width: 15%
 					.la-name
 						width: calc(50% - 28px)
 					.la-ects
 						width: 10%
+					.la-semester
+						width: 15%
 					&.la-header
 						font-weight: bold
 						border-bottom: 2px solid #ddd
